dirty commit, migrating

--- a/site/index.html
+++ b/site/index.html
@@ -6,10 +6,16 @@
     </head>
     <body>
 
-        <h1>Gulp 4 with Webpack</h1>
-        <p>Open the console to the see imported log.</p>
+		<div id="new-grid-div"></div>
+		<div id="character" style="position:fixed; left:0.41em; top:0.5em;">@</div>
+		<div>
+			<canvas id="canvas_element" ></canvas>
+		</div>
+		<div>
+			<canvas id="tileset_element"></canvas>
+		</div>
 
-        <script src="/bundle.js"></script>
+		<script src="/bundle.js"></script>
 
     </body>
 </html>
