removed faulty environment settings, old html, allowed local deployment

--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
 			<canvas id="tileset_element"></canvas>
 		</div>
 
-		<script src="/bundle.js"></script>
+		<script src="bundle.js"></script>
 
     </body>
 </html>
